--- a/templates/articles.html.twig
+++ b/templates/articles.html.twig
@@ -11,8 +11,10 @@
     <h1>Witam Cię w moich artykułach!</h1>
     <div>
         {% for article in articles %}
-        <h2>{{ article.title }}</h2>
-        <p>{{ article.content }}</p>
+        <a href="{{ article.link }}" target="_blank">
+            <h2>{{ article.title }}</h2>
+            <p>{{ article.content }}</p>
+        </a>
         {% endfor %}
     </div>
 </body>
