--- a/templates/articles.html.twig
+++ b/templates/articles.html.twig
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html lang="pl">
+{% extends "base.html.twig" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artykuły</title>
-</head>
+{% block title %}
+Artykuły
+{% endblock %}
 
-<body>
-    <h1>Witam Cię w moich artykułach!</h1>
-    <div>
-        {% for article in articles %}
-        <a href="{{ article.link }}" target="_blank">
-            <h2>{{ article.title }}</h2>
-            <p>{{ article.content }}</p>
-        </a>
-        {% endfor %}
-    </div>
-</body>
-
-</html>
+{% block body %}
+<h1>Witam Cię w moich artykułach!</h1>
+<div>
+    {% for article in articles %}
+    <a href="{{ article.link }}" target="_blank">
+        <h2>{{ article.title }}</h2>
+        <p>{{ article.content }}</p>
+    </a>
+    {% endfor %}
+</div>
+{% endblock%}
