--- a/templates/blog/articles.html.twig
+++ b/templates/blog/articles.html.twig
@@ -10,6 +10,9 @@ Artykuły
     {% for article in articles %}
     <a href="{{ article.link }}" target="_blank">
         <h2>{{ article.title }}</h2>
+        <p style="font-size: 0.8rem">
+            {{ article.addedAt | date("m/d/Y") }}
+        </p>
         <p>{{ article.content }}</p>
     </a>
     {% endfor %}
