Feat: add navs in pages

--- a/templates/about_me/index.html.twig
+++ b/templates/about_me/index.html.twig
@@ -3,6 +3,13 @@
 {% block title %}Informacje o mnie! :-) {% endblock %}
 
 {% block body %}
+<nav>
+    <ul>
+        <a href="/">
+            <li>Main Page</li>
+        </a>
+    </ul>
+</nav>
 <h1>Trochę informacji o mnie:</h1>
 <ul>
     {% for info in informations %}
