--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -5,6 +5,13 @@
 {% endblock %}
 
 {% block body %}
+<nav>
+    <ul>
+        <a href="/">
+            <li>Main Page</li>
+        </a>
+    </ul>
+</nav>
 <h1>{{ article.title}}</h1>
 <div>
     {{ article.content }}
