--- a/templates/blog/articles.html.twig
+++ b/templates/blog/articles.html.twig
@@ -5,6 +5,13 @@ Artykuły
 {% endblock %}
 
 {% block body %}
+<nav>
+    <ul>
+        <a href="/">
+            <li>Main Page</li>
+        </a>
+    </ul>
+</nav>
 <h1>Witam Cię w moich artykułach!</h1>
 <div>
     {% for article in articles %}
