--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -12,12 +12,16 @@
         </a>
     </ul>
 </nav>
+{% if article.images %}
 <img src="{{ article.images | first.path }}" alt="{{ article.images | first.alt }}" style="height: 400px">
+{% endif %}
 <h1>{{ article.title}}</h1>
 <div>
     {{ article.content }}
 </div>
 {% for img in article.images[1:] %}
+{% if article.images %}
 <img src="{{ img.path }}" alt="{{ img.alt }}" style="height: 100px">
+{% endif %}
 {% endfor %}
 {% endblock %}
