Feat: add contact page

--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -12,7 +12,7 @@
         <a href="/about-me">
             <li>O mnie</li>
         </a>
-        <a href="#">
+        <a href="/contact">
             <li>Kontakt</li>
         </a>
     </ul>
