--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -15,5 +15,8 @@
         <a href="{{ path('app_register') }}">
             <li>Rejestracja</li>
         </a>
+        <a href="{{ path('app_login') }}">
+            <li>Login</li>
+        </a>
     </ul>
 </nav>
