Feat: add logout route

--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -18,5 +18,8 @@
         <a href="{{ path('app_login') }}">
             <li>Login</li>
         </a>
+        <a href="{{ path('app_logout') }}">
+            <li>Login</li>
+        </a>
     </ul>
 </nav>
