--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -19,7 +19,10 @@
             <li>Login</li>
         </a>
         <a href="{{ path('app_logout') }}">
-            <li>Login</li>
+            <li>Logout</li>
+        </a>
+        <a href="{{ path('app_content') }}">
+            <li>Content dla zalogowanych</li>
         </a>
     </ul>
 </nav>
